--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ os:
 julia:
     - release
     - nightly
+    - 0.4
 notifications:
     email: false
 sudo: false
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.clone(pwd())'
-    - julia -e 'Pkg.test("YAML", coverage=true)'
+    - julia --check-bounds=yes --color=yes -e 'Pkg.clone(pwd()); Pkg.build("Holidays"); Pkg.test("Holidays"; coverage=true)'
 after_success:
-    - julia -e 'cd(Pkg.dir("YAML")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
+    - julia -e 'cd(Pkg.dir("Holidays")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
