fixing build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ os:
     - osx
 julia:
     - release
-    - nightly
     - 0.4
 notifications:
     email: false
 sudo: false
 script:
+    - pip install --user holidays
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia --check-bounds=yes --color=yes -e 'Pkg.clone(pwd()); Pkg.build("Holidays"); Pkg.test("Holidays"; coverage=true)'
 after_success:
