updating pip commands again

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ julia:
 notifications:
     email: false
 sudo: false
-install: pip install --user -r holidays six
+install:
+    -   pip install --user holidays
+    -   pip install --user six
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia --check-bounds=yes --color=yes -e 'Pkg.clone(pwd()); Pkg.build("Holidays"); Pkg.test("Holidays"; coverage=true)'
