--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: julia
 os:
     - linux
 julia:
-    - 0.5
-    - 0.4
+    - release
+    - nightly
 notifications:
     email: false
 sudo: false
